--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Green chop</title>
     <!-- font awesome -->
     <link
       rel="stylesheet"
@@ -16,6 +16,84 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap"
       rel="stylesheet"
     />
+    <!-- favicon -->
+    <link
+      rel="apple-touch-icon"
+      sizes="57x57"
+      href="./assets/favicon/apple-icon-57x57.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="60x60"
+      href="./assets/favicon/apple-icon-60x60.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="72x72"
+      href="./assets/favicon/apple-icon-72x72.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="76x76"
+      href="./assets/favicon/apple-icon-76x76.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="114x114"
+      href="./assets/favicon/apple-icon-114x114.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="120x120"
+      href="./assets/favicon/apple-icon-120x120.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="144x144"
+      href="./assets/favicon/apple-icon-144x144.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="152x152"
+      href="./assets/favicon/apple-icon-152x152.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./assets/favicon/apple-icon-180x180.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="./assets/favicon/android-icon-192x192.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="96x96"
+      href="./assets/favicon/favicon-96x96.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./assets/favicon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="./assets/favicon/manifest.json" />
+    <meta name="msapplication-TileColor" content="#ffffff" />
+    <meta
+      name="msapplication-TileImage"
+      content="./assets/favicon/ms-icon-144x144.png"
+    />
+    <meta name="theme-color" content="#ffffff" />
+    <!-- css -->
     <link rel="stylesheet" href="./css/grid.css" />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
@@ -63,6 +141,7 @@
           <div class="product__inner">
             <p class="product__top-title">Sản phẩm</p>
             <div class="product-list">
+              <!-- item 1 -->
               <div class="product-item">
                 <img
                   src="./assets/images/product-donut.png"
@@ -74,60 +153,166 @@
                 <p class="product-item__price">Giá: <span>600.000</span> vnd</p>
                 <button class="product-item__btn">Thêm vào giỏ hàng</button>
               </div>
+              <!-- item 2 -->
               <div class="product-item">
                 <img
-                  src="./assets/images/product-donut.png"
+                  src="./assets/images/product-dice.png"
                   alt="donut"
                   class="product__img"
                 />
-                <p class="product-item__title">Combo Quán ăn</p>
-                <p class="product-item__desc">1 Thùng 1000 đôi</p>
-                <p class="product-item__price">Giá: <span>600.000</span> vnd</p>
+                <p class="product-item__title">Combo Quán ăn - nhà hàng</p>
+                <p class="product-item__desc">1 Thùng 2000 đôi</p>
+                <p class="product-item__price">
+                  Giá: <span>1.200.000</span> vnd
+                </p>
                 <button class="product-item__btn">Thêm vào giỏ hàng</button>
               </div>
+              <!-- item 3 -->
               <div class="product-item">
                 <img
-                  src="./assets/images/product-donut.png"
+                  src="./assets/images/product-game.png"
                   alt="donut"
                   class="product__img"
                 />
-                <p class="product-item__title">Combo Quán ăn</p>
-                <p class="product-item__desc">1 Thùng 1000 đôi</p>
-                <p class="product-item__price">Giá: <span>600.000</span> vnd</p>
+                <p class="product-item__title">
+                  Combo Quán ăn <br />
+                  Nhà hàng - Khách sạn
+                </p>
+                <p class="product-item__desc">1 Thùng 3000 đôi</p>
+                <p class="product-item__price">
+                  Giá: <span>1.800.000</span> vnd
+                </p>
                 <button class="product-item__btn">Thêm vào giỏ hàng</button>
               </div>
+              <!-- item 4 -->
               <div class="product-item">
                 <img
                   src="./assets/images/product-donut.png"
                   alt="donut"
                   class="product__img"
                 />
-                <p class="product-item__title">Combo Quán ăn</p>
-                <p class="product-item__desc">1 Thùng 1000 đôi</p>
-                <p class="product-item__price">Giá: <span>600.000</span> vnd</p>
+                <p class="product-item__title">Combo Gia đình bé xinh</p>
+                <p class="product-item__desc">1 Thùng 100 đôi</p>
+                <p class="product-item__price">Giá: <span>60.000</span> vnd</p>
                 <button class="product-item__btn">Thêm vào giỏ hàng</button>
               </div>
+              <!-- item 5 -->
               <div class="product-item">
                 <img
-                  src="./assets/images/product-donut.png"
+                  src="./assets/images/product-dice.png"
                   alt="donut"
                   class="product__img"
                 />
-                <p class="product-item__title">Combo Quán ăn</p>
-                <p class="product-item__desc">1 Thùng 1000 đôi</p>
-                <p class="product-item__price">Giá: <span>600.000</span> vnd</p>
+                <p class="product-item__title">Combo Gia đình</p>
+                <p class="product-item__desc">1 Thùng 2000 đôi</p>
+                <p class="product-item__price">Giá: <span>120.000</span> vnd</p>
                 <button class="product-item__btn">Thêm vào giỏ hàng</button>
               </div>
+              <!-- item 6 -->
               <div class="product-item">
                 <img
-                  src="./assets/images/product-donut.png"
+                  src="./assets/images/product-game.png"
                   alt="donut"
                   class="product__img"
                 />
-                <p class="product-item__title">Combo Quán ăn</p>
-                <p class="product-item__desc">1 Thùng 1000 đôi</p>
-                <p class="product-item__price">Giá: <span>600.000</span> vnd</p>
+                <p class="product-item__title">Combo Đại gia đình</p>
+                <p class="product-item__desc">1 Thùng 300 đôi</p>
+                <p class="product-item__price">Giá: <span>180.000</span> vnd</p>
                 <button class="product-item__btn">Thêm vào giỏ hàng</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="about">
+        <div class="container">
+          <div class="about__inner">
+            <div class="about__content">
+              <img
+                src="./assets/images/about-02.png"
+                alt="decor"
+                class="about__decor"
+              />
+              <h2 class="about__title">
+                Đũa thay đầu GreenChop - <br />
+                thẻ xanh an toàn trong từng bữa ăn
+              </h2>
+              <p class="about__desc">
+                GreenChop là sản phẩm đũa thay đầu duy nhất trên thị trường hiện
+                tại. Sản phẩm cho phép người dùng tháo lắp và thay mới đầu đũa
+                100% trong mỗi bữa ăn. Nhờ đó, GreenChop giúp ngăn ngừa khả năng
+                lây lan dịch bệnh và đảm bảo an toàn cho người dùng.
+              </p>
+            </div>
+            <figure class="about__media">
+              <img
+                src="./assets/images/about-01.png"
+                alt="about"
+                class="about__img"
+              />
+            </figure>
+          </div>
+        </div>
+      </section>
+
+      <section class="info">
+        <div class="info-bg"></div>
+
+        <div class="container">
+          <div class="info__inner">
+            <h2 class="info__title">
+              GreenChop bảo vệ <br />người dùng như thế nào?
+            </h2>
+            <p class="info__desc">
+              Mỗi đôi đũa GreenChop gồm 2 phần thân đũa và đầu đũa. Người dùng
+              có thể dễ dàng tách rời hoặc gắn liền 2 phần này với nhau
+            </p>
+            <div class="info-list">
+              <!-- item 1 -->
+              <div class="info-item">
+                <img
+                  src="./assets/images/info1.jpg"
+                  alt="info"
+                  class="info__img"
+                />
+                <div class="info-item__inner">
+                  <h3 class="info-item__title">01. Thân trên đũa</h3>
+                  <p class="info-item__desc">
+                    Làm từ nhựa Melamine, đầy đủ điều kiện chứng nhận An toàn
+                    thực phẩm.
+                  </p>
+                </div>
+              </div>
+              <!-- item 2 -->
+              <div class="info-item">
+                <img
+                  src="./assets/images/info2.jpg"
+                  alt="info"
+                  class="info__img"
+                />
+                <div class="info-item__inner">
+                  <h3 class="info-item__title">02. Đầu đũa</h3>
+                  <p class="info-item__desc">
+                    Được làm từ gỗ tre và bảo quản trong bọc khử trùng 100%,
+                    không hề có sự xâm nhập của vi khuẩn/vì rus gây hại. Người
+                    dùng là người đầu tiên chạm tay vào đầu đũa sau khi mở bọc.
+                  </p>
+                </div>
+              </div>
+              <!-- item 3 -->
+              <div class="info-item">
+                <img
+                  src="./assets/images/info3.jpg"
+                  alt="info"
+                  class="info__img"
+                />
+                <div class="info-item__inner">
+                  <h3 class="info-item__title">03. Khớp Inox 304</h3>
+                  <p class="info-item__desc">
+                    Khớp Inox 304 để gắn 2 phần đũa với nhau
+                  </p>
+                </div>
               </div>
             </div>
           </div>
