--- a/index.html
+++ b/index.html
@@ -318,6 +318,75 @@
           </div>
         </div>
       </section>
+
+      <section class="instruction">
+        <div class="container">
+          <div class="instruction__inner">
+            <h2 class="instruction__title">
+              Hướng dẫn thao tác <br />
+              sử dụng đũa GreenChop
+            </h2>
+            <p class="instruction__desc desc">
+              Bằng cách này, người dùng sẽ có một đôi đũa với đầu đũa mới 100%,
+              không qua tay bất kỳ ai trước đó
+            </p>
+
+            <div class="instruction-list">
+              <!-- item 1 -->
+              <div class="instruction-item">
+                <p class="instruction-item__number">01</p>
+                <p class="instruction-item__desc">
+                  Tháo bọc đầu đũa, lấy đầu đũa tre đã khử trùng 100% ghép vào
+                  thân đũa, tạo thành một đôi đũa hoàn chỉnh.
+                </p>
+              </div>
+              <!-- item 2 -->
+              <div class="instruction-item">
+                <p class="instruction-item__number">02</p>
+                <p class="instruction-item__desc">
+                  Dùng bữa với đũa GreenChop đã ghép. Sau khi dùng bữa xong,
+                  tháo đầu đũa đã dùng để bỏ đi.
+                </p>
+              </div>
+              <!-- item 3 -->
+              <div class="instruction-item">
+                <p class="instruction-item__number">03</p>
+                <p class="instruction-item__desc">
+                  Giữ lại thân đũa, vệ sinh sạch sẽ để sử dụng cho những bữa ăn
+                  sau đó.
+                </p>
+              </div>
+              <!-- item 4 -->
+              <div class="instruction-item">
+                <p class="instruction-item__number">04</p>
+                <p class="instruction-item__desc">
+                  Tiếp tục sử dụng một đầu đũa mới để gắn vào thân đũa trong lần
+                  dùng bữa tiếp theo.
+                </p>
+              </div>
+            </div>
+
+            <div class="instruction-more">
+              <div class="instruction-more__content">
+                <p class="instruction-more__desc">
+                  Thao tác thay đầu đũa mỗi bữa ăn giúp người dùng sử dụng một
+                  đôi đũa mới trong mọi bữa ăn và không có sự xâm nhập của
+                  virus/vi khuẩn gây bệnh trước đó. Nhờ vậy, GreenChop đảm bảo
+                  an toàn cho thực khách và đẩy lùi nguy cơ lây lan dịch bệnh
+                  trong ăn uống hàng ngày.
+                </p>
+              </div>
+              <figure class="instruction__img-wrapper">
+                <img
+                  src="./assets/images/more.png"
+                  alt="more"
+                  class="instruction__img"
+                />
+              </figure>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
