--- a/index.html
+++ b/index.html
@@ -387,6 +387,54 @@
           </div>
         </div>
       </section>
+
+      <section class="rule">
+        <div class="container">
+          <div class="rule__inner">
+            <h2 class="rule__title">
+              Bảo vệ bản thân <br />
+              nguyên tắc 5k cùng Greenchop
+            </h2>
+
+            <div class="rule-row">
+              <figure class="rule-media">
+                <img
+                  src="./assets/images/rule-01.png"
+                  alt="rule"
+                  class="rule__img"
+                />
+              </figure>
+              <p class="rule__desc desc">
+                Kể cả khi đã thực hiện 5K, việc dùng chung dụng cụ ăn uống với
+                người khác vẫn mang những tiềm tàng khả năng bị lây bệnh. Lúc
+                này, đầu đũa được thay thế mỗi bữa ăn giúp ngăn ngừa sự bám víu
+                của Covid 19 cũng như các loại vị khuẩn/virus gây bệnh khác.
+                Không chỉ có thể, GreenChop là sự lựa chọn hoàn hảo cho những
+                thực khách có thói quen sử dụng dụng cụ cá nhân ngay cả tại
+                những nơi công cộng một cách dễ dàng.
+              </p>
+            </div>
+            <div class="rule-row">
+              <figure class="rule-media">
+                <img
+                  src="./assets/images/rule-02.png"
+                  alt="rule"
+                  class="rule__img"
+                />
+              </figure>
+              <p class="rule__desc desc">
+                Đũa GreenChop hoàn thiện cả về công năng lẫn thẩm mỹ. Đầu đũa
+                được làm từ 100% chất liệu tự nhiên, màu sắc hài hòa, kiểu dáng
+                cứng cáp không khác gì đũa ăn truyền thống. Hiện đại, tối giản
+                là những đặc tính nổi bật nhất khi bàn tới thiết kế của sản
+                phẩm. Chính vì thế, GreenChop dần trở thành vật bất ly thân và
+                giúp khẳng định sự đẳng cấp và sự tinh tế của những thực khách
+                văn minh.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
