--- a/index.html
+++ b/index.html
@@ -432,6 +432,100 @@
                 văn minh.
               </p>
             </div>
+
+            <div class="rule-list">
+              <!-- item 1 -->
+              <div class="rule-item">
+                <span class="rule-item__wrapper">
+                  <img
+                    src="./assets/icons/quality-orange.svg"
+                    alt="quality"
+                    class="rule-item__img"
+                /></span>
+                <div class="rule-item__inner">
+                  <h3 class="rule-item__title">Chất liệu an toàn</h3>
+                  <p class="rule-item__desc">
+                    Phần đầu đũa được làm bằng bằng gỗ tre, đảm bảo cho sức khỏe
+                    người dùng
+                  </p>
+                </div>
+              </div>
+              <!-- item 2 -->
+              <div class="rule-item">
+                <span class="rule-item__wrapper">
+                  <img
+                    src="./assets/icons/guard.svg"
+                    alt="guard"
+                    class="rule-item__img"
+                /></span>
+                <div class="rule-item__inner">
+                  <h3 class="rule-item__title">Vệ sinh và khử khuẩn</h3>
+                  <p class="rule-item__desc">
+                    Đầu đũa mới 100% mỗi bữa ăn, không chung đụng đầu đũa với
+                    bất kì ai khác.
+                  </p>
+                </div>
+              </div>
+              <!-- item 3 -->
+              <div class="rule-item">
+                <span class="rule-item__wrapper">
+                  <img
+                    src="./assets/icons/vote-like.svg"
+                    alt="guard"
+                    class="rule-item__img"
+                /></span>
+                <div class="rule-item__inner">
+                  <h3 class="rule-item__title">Tiện lợi</h3>
+                  <p class="rule-item__desc">
+                    Thao tác tháo lắp nhanh gọn và đơn giản
+                  </p>
+                </div>
+              </div>
+              <!-- item 4 -->
+              <div class="rule-item">
+                <span class="rule-item__wrapper">
+                  <img
+                    src="./assets/icons/pig.svg"
+                    alt="pig"
+                    class="rule-item__img"
+                /></span>
+                <div class="rule-item__inner">
+                  <h3 class="rule-item__title">Tiết kiệm</h3>
+                  <p class="rule-item__desc">
+                    Giá thành đầu đũa cạnh tranh và hợp lý.
+                  </p>
+                </div>
+              </div>
+              <!-- item 5 -->
+              <div class="rule-item">
+                <span class="rule-item__wrapper">
+                  <img
+                    src="./assets/icons/like.svg"
+                    alt="like"
+                    class="rule-item__img"
+                /></span>
+                <div class="rule-item__inner">
+                  <h3 class="rule-item__title">Độc quyền</h3>
+                  <p class="rule-item__desc">
+                    Phần đầu đũa được làm bằng bằng gỗ tre, đảm bảo cho sức khỏe
+                    người dùng
+                  </p>
+                </div>
+              </div>
+              <!-- item 6 -->
+              <div class="rule-item">
+                <span class="rule-item__wrapper">
+                  <img
+                    src="./assets/icons/car.svg"
+                    alt=""
+                    class="rule-item__img"
+                /></span>
+                <div class="rule-item__inner">
+                  <h3 class="rule-item__title">Giao hàng nhanh</h3>
+                  <p class="rule-item__desc">Giao hàng trong 24h</p>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </section>
