--- a/index.html
+++ b/index.html
@@ -530,5 +530,128 @@
         </div>
       </section>
     </main>
+
+    <footer class="footer">
+      <div class="bg"></div>
+      <div class="container">
+        <div class="footer__inner">
+          <div class="footer-row">
+            <!-- col 1 -->
+            <div class="footer-col">
+              <img src="./assets/logo/logo.png" alt="logo" />
+              <p class="footer__desc">
+                GreenChop là bạn đồng hành của người tiêu dùng
+              </p>
+            </div>
+            <!-- col 2 -->
+            <div class="footer-col">
+              <h3 class="footer__title">Trang chủ</h3>
+              <ul class="footer-list">
+                <li class="footer-item">
+                  <a href="#about" class="footer-link">Về greenchop</a>
+                </li>
+                <li class="footer-item">
+                  <a href="#products" class="footer-link">Sản phẩm</a>
+                </li>
+                <li class="footer-item">
+                  <a href="#news" class="footer-link">Tin tức</a>
+                </li>
+              </ul>
+            </div>
+            <!-- col 3 -->
+            <div class="footer-col">
+              <h3 class="footer__title">Hỗ trợ</h3>
+              <ul class="footer-list">
+                <li class="footer-item">Đặt hàng trực tuyến (8h-22h)</li>
+                <li class="footer-item">
+                  <img
+                    src="./assets/icons/alarm.svg"
+                    alt="alarm"
+                    class="footer__icon"
+                  />
+                  Thứ 2 - Thứ 6
+                </li>
+                <li class="footer-item">
+                  <img
+                    src="./assets/icons/phone_outline.svg"
+                    alt="phone"
+                    class="footer__icon"
+                  />
+                  091 1717 222
+                </li>
+              </ul>
+            </div>
+            <!-- col 4 -->
+            <div class="footer-col">
+              <h3 class="footer__title">Liên hệ</h3>
+              <ul class="footer-list">
+                <li class="footer-item">
+                  <a href="mailto:greenchopvn@gmail.com" class="footer-link">
+                    <img
+                      src="./assets/icons/mail.svg"
+                      alt="mail"
+                      class="footer__icon"
+                    />
+                    greenchopvn@gmail.com
+                  </a>
+                </li>
+                <li class="footer-item">
+                  <a href="https://greenchop.vn" class="footer-link">
+                    <img src="./assets/icons/earth.svg" alt="" />Greenchop.vn</a
+                  >
+                </li>
+                <li class="footer-item">
+                  <img
+                    src="assets/icons/map.svg"
+                    alt="map"
+                    class="footer__icon"
+                  />
+                  428 Điện Biên Phủ, P11,<br />
+                  Quận 10, TPHCM
+                </li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="footer-bottom">
+            <img
+              src="./assets/images/verify.png"
+              alt="vefify"
+              class="footer__img"
+            />
+            <div class="footer-bottom__list">
+              <a href="https://youtube.com" class="footer-bottom__link">
+                <img
+                  src="./assets/icons/youtube.svg"
+                  alt="youtube"
+                  class="footer-bottom__icon"
+                />
+              </a>
+              <a href="https://facebook.com" class="footer-bottom__link">
+                <img
+                  src="./assets/icons/facebook.svg"
+                  alt="facebook"
+                  class="footer-bottom__icon"
+                />
+              </a>
+              <a href="https://instagram.com" class="footer-bottom__link">
+                <img
+                  src="./assets/icons/instagram.svg"
+                  alt="instagram"
+                  class="footer-bottom__icon"
+                />
+              </a>
+              <a href="https://twitter.com" class="footer-bottom__link">
+                <img
+                  src="./assets/icons/coolicon.svg"
+                  alt="twitter"
+                  class="footer-bottom__icon"
+                />
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
