--- a/index.html
+++ b/index.html
@@ -148,7 +148,9 @@
                   alt="donut"
                   class="product__img"
                 />
-                <p class="product-item__title">Combo Quán ăn</p>
+                <p class="product-item__title">
+                  <a href="#!">Combo Quán ăn</a>
+                </p>
                 <p class="product-item__desc">1 Thùng 1000 đôi</p>
                 <p class="product-item__price">Giá: <span>600.000</span> vnd</p>
                 <button class="product-item__btn">Thêm vào giỏ hàng</button>
@@ -160,7 +162,9 @@
                   alt="donut"
                   class="product__img"
                 />
-                <p class="product-item__title">Combo Quán ăn - nhà hàng</p>
+                <p class="product-item__title">
+                  <a href="#!">Combo Quán ăn - nhà hàng</a>
+                </p>
                 <p class="product-item__desc">1 Thùng 2000 đôi</p>
                 <p class="product-item__price">
                   Giá: <span>1.200.000</span> vnd
@@ -175,8 +179,10 @@
                   class="product__img"
                 />
                 <p class="product-item__title">
-                  Combo Quán ăn <br />
-                  Nhà hàng - Khách sạn
+                  <a href="#!">
+                    Combo Quán ăn <br />
+                    Nhà hàng - Khách sạn
+                  </a>
                 </p>
                 <p class="product-item__desc">1 Thùng 3000 đôi</p>
                 <p class="product-item__price">
@@ -191,7 +197,9 @@
                   alt="donut"
                   class="product__img"
                 />
-                <p class="product-item__title">Combo Gia đình bé xinh</p>
+                <p class="product-item__title">
+                  <a href="#!">Combo Gia đình bé xinh</a>
+                </p>
                 <p class="product-item__desc">1 Thùng 100 đôi</p>
                 <p class="product-item__price">Giá: <span>60.000</span> vnd</p>
                 <button class="product-item__btn">Thêm vào giỏ hàng</button>
@@ -203,7 +211,9 @@
                   alt="donut"
                   class="product__img"
                 />
-                <p class="product-item__title">Combo Gia đình</p>
+                <p class="product-item__title">
+                  <a href="#!">Combo Gia đình</a>
+                </p>
                 <p class="product-item__desc">1 Thùng 2000 đôi</p>
                 <p class="product-item__price">Giá: <span>120.000</span> vnd</p>
                 <button class="product-item__btn">Thêm vào giỏ hàng</button>
@@ -215,7 +225,9 @@
                   alt="donut"
                   class="product__img"
                 />
-                <p class="product-item__title">Combo Đại gia đình</p>
+                <p class="product-item__title">
+                  <a href="#!">Combo Đại gia đình</a>
+                </p>
                 <p class="product-item__desc">1 Thùng 300 đôi</p>
                 <p class="product-item__price">Giá: <span>180.000</span> vnd</p>
                 <button class="product-item__btn">Thêm vào giỏ hàng</button>
