--- a/index.html
+++ b/index.html
@@ -287,8 +287,9 @@
               GreenChop bảo vệ <br />người dùng như thế nào?
             </h2>
             <p class="quality__desc">
-              Mỗi đôi đũa GreenChop gồm 2 phần thân đũa và đầu đũa. Người dùng
-              có thể dễ dàng tách rời hoặc gắn liền 2 phần này với nhau
+              Mỗi đôi đũa GreenChop gồm 2 phần thân đũa và đầu đũa. <br />
+              Người dùng có thể dễ dàng tách rời hoặc gắn liền 2 phần này với
+              nhau
             </p>
             <div class="quality-list">
               <!-- item 1 -->
